fix: alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,14 @@
     }
 }
 
-@media screen and (width: 1024px) and (height: 1366px) {
+@media screen and (min-width: 1024px) {
     .products-grid {
-        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-columns: repeat(2, 1fr);
     }
-}
 
-@media screen and (min-width: 1280px) and (max-width: 1540px) {
-    .products-grid {
-        grid-template-columns: repeat(3, 1fr) !important;
+    @media screen and (min-width: 1280px) and (max-width: 1540px) {
+        .products-grid {
+            grid-template-columns: repeat(3, 1fr) !important;
+        }
     }
 }
